# boron

./: .gitignore  .gitmodules  boron.cabal
doc/: ideas  todo
examples/: random  simple.ini  simple.json
src/: CLI.hs  Command.hs  Config.hs  Main.hs  Master.hs  Slave.hs  Timer.hs  Util.hs  Web.hs  view.js
ui/: api.js  classy.js  dom.js  index.html  main.js  router.js  style.css  util.js  views.js
