
name:           boron
version:        0.0.0.1
cabal-version:  >= 1.10
build-type:     Simple
license:        GPL-3
license-file:   LICENSE.txt
copyright:      (c) 2014 Karl Voelker
author:         Karl Voelker
maintainer:     boron@karlv.net
stability:      experimental
bug-reports:    mailto:boron@karlv.net
synopsis:       A simple build server
category:       Prelude
tested-with:    GHC == 7.6.3

Executable boron
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans
  build-depends:
    base                 >= 4    && < 5,
    unordered-containers >= 0.2  && < 0.3,
    text                 >= 0.11 && < 0.12,
    process              >= 1.1  && < 1.2,
    ini                  >= 0.2  && < 0.3,
    time                 >= 1.4  && < 1.5
  default-extensions:
    LambdaCase
    OverloadedStrings

