
name:           boron
version:        0.0.0.1
cabal-version:  >= 1.10
build-type:     Simple
license:        GPL-3
license-file:   LICENSE.txt
copyright:      (c) 2014 Karl Voelker
author:         Karl Voelker
maintainer:     boron@karlv.net
stability:      experimental
bug-reports:    mailto:boron@karlv.net
synopsis:       A simple build server
category:       Prelude
tested-with:    GHC == 7.6.3, GHC == 7.8.1
data-files:
  ui/index.html
  ui/style.css
  ui/api.js
  ui/classy.js
  ui/dom.js
  ui/main.js
  ui/router.js
  ui/views.js
  ui/ext/classyjs/build/classy.js
  ui/ext/pathjs/path.js
  ui/ext/q/q.js
  ui/ext/requirejs/require.js
  ui/ext/reqwest/reqwest.js

Executable boron-control
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: CLI.hs
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans
    -feager-blackholing
  build-depends:
    base >= 4      && < 5,
    HTTP >= 4000.2 && < 4000.3

Executable boron
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans
    -feager-blackholing
    -threaded
    -with-rtsopts=-N
  build-depends:
    base                 >= 4    && < 5,
    unordered-containers >= 0.2  && < 0.3,
    text                 >= 0.11 && < 1.2,
    unix                 >= 2.6  && < 2.8,
    process              >= 1.1  && < 1.3,
    ini                  >= 0.2  && < 0.3,
    time                 >= 1.4  && < 1.5,
    system-filepath      >= 0.4  && < 0.5,
    system-fileio        >= 0.3  && < 0.4,
    json                 >= 0.7  && < 0.8,
    http-types           >= 0.8  && < 0.9,
    wai                  >= 2.0  && < 2.2,
    wai-app-static       >= 2.0  && < 2.1,
    warp                 >= 2.1  && < 2.2
  default-extensions:
    -- Syntactic extensions
    LambdaCase
    RecordWildCards
    -- Minor semantic extensions
    OverloadedStrings

